@@ -2,7 +2,7 @@ dnl AUTOCONF configuration for regex
 dnl Bruno Haible 18.4.1995
 dnl Sam Steingold 2003-2008
 
-AC_PREREQ(2.57)
+AC_PREREQ(2.58)
 AC_INIT(regexp, 1.0, clisp-list)
 AC_CONFIG_SRCDIR(regexp.lisp)
 AC_CONFIG_AUX_DIR(../../src/build-aux)
@@ -12,7 +12,7 @@ RSE_BOLD
 BOLD_MSG([Regexp (Common)])
 CL_MODULE_COMMON_CHECKS
 AC_CHECK_HEADERS(string.h sys/types.h)
-gl_C_RESTRICT
+AC_C_RESTRICT
 
 dnl called from top-level configure.in:gl_INIT [gl_FUNC_ALLOCA gl_REGEX]
 
